tests/integration/auth/snapshots/main__integration__auth__whoami__an_api_key_has_no_grant_type.snap
---
source: tests/integration/auth/whoami.rs
expression: "run_whoami(&server, command)"
---
{
  "json_version": "1",
  "data": {
    "key_type": "User",
    "graph_id": null,
    "graph_title": null,
    "user_id": "a-user-id",
    "origin": "$APOLLO_KEY",
    "grant_type": null,
    "api_key": "an-a*****-key",
    "success": true
  },
  "error": null
}
