tests/integration/auth/snapshots/main__integration__auth__whoami__client_credentials_report_their_grant_type.snap
---
source: tests/integration/auth/whoami.rs
expression: "run_whoami(&server, command)"
---
{
  "json_version": "1",
  "data": {
    "key_type": "User",
    "graph_id": null,
    "graph_title": null,
    "user_id": "a-user-id",
    "origin": "$APOLLO_CLIENT_ID",
    "grant_type": "client_credentials",
    "api_key": "exch********oken",
    "success": true
  },
  "error": null
}
